--- a/inMyRoom_vulkan/CMakeLists.txt
+++ b/inMyRoom_vulkan/CMakeLists.txt
@@ -120,6 +120,7 @@ SET(SRC #eig3    .h
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/Paralgram.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/Plane.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/Ray.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/Sphere.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/Triangle.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/ViewportFrustum.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/DynamicMeshes.h"
@@ -183,6 +184,7 @@ SET(SRC #eig3    .h
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/Paralgram.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/Plane.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/Ray.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/Sphere.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/Triangle.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/ViewportFrustum.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/DynamicMeshes.cpp"
