Add lights class

--- a/inMyRoom_vulkan/CMakeLists.txt
+++ b/inMyRoom_vulkan/CMakeLists.txt
@@ -100,6 +100,7 @@ SET(SRC #eig3    .h
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/CameraDefaultInputCompEntity.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/EarlyNodeGlobalMatrixCompEntity.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/LateNodeGlobalMatrixCompEntity.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/LightCompEntity.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/ModelCollisionCompEntity.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/ModelDrawCompEntity.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/NodeDataCompEntity.h"
@@ -110,10 +111,12 @@ SET(SRC #eig3    .h
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/CameraDefaultInputComp.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/EarlyNodeGlobalMatrixComp.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/LateNodeGlobalMatrixComp.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/LightComp.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/ModelCollisionComp.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/ModelDrawComp.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/NodeDataComp.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/DynamicMeshComp.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/Cylinder.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/FrustumCulling.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/OBB.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/OBBtree.h"
@@ -130,6 +133,7 @@ SET(SRC #eig3    .h
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/VulkanInit.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/HelperUtils.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/ImagesInterfaces.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/Lights.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/RendererBase.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/TLASbuilder.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/Exposure.h"
@@ -164,6 +168,7 @@ SET(SRC #eig3    .h
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/CameraDefaultInputCompEntity.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/EarlyNodeGlobalMatrixCompEntity.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/LateNodeGlobalMatrixCompEntity.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/LightCompEntity.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/ModelCollisionCompEntity.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/ModelDrawCompEntity.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/NodeDataCompEntity.cpp"
@@ -174,10 +179,12 @@ SET(SRC #eig3    .h
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/CameraDefaultInputComp.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/EarlyNodeGlobalMatrixComp.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/LateNodeGlobalMatrixComp.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/LightComp.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/ModelCollisionComp.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/ModelDrawComp.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/NodeDataComp.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/DynamicMeshComp.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/Cylinder.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/FrustumCulling.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/OBB.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/OBBtree.cpp"
@@ -194,6 +201,7 @@ SET(SRC #eig3    .h
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/VulkanInit.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/HelperUtils.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/ImagesInterfaces.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/Lights.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/TLASbuilder.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/Exposure.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/Meshes/AnimationsDataOfNodes.cpp"
