--- a/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
@@ -2,22 +2,47 @@
 
 gameDLL:
 {
-	path:											"game_dll/cmake-build-debug/libgame_dll.so"
+	path:										"game_dll/cmake-build-debug/libgame_dll.so"
 }
 
 // "_empty" is already imported in order to build logic around it
 imports:
 {
-	map:											"Table_room/scene.gltf"
-	snake:											"Snake/Timber Rattlesnake.gltf"
-	apple:											"Apple/scene.gltf"
+	map:										"Table_room/scene.gltf"
+	snake:										"Snake/Timber Rattlesnake.gltf"
+	apple:										"Apple/scene.gltf"
 }
 
 fabs:
 {
+	sun:
+	{
+		basedOn:                                "_empty"
+		tweak:
+		{
+			"":
+			{
+				NodeData:
+				{
+					LocalRotation:              [  -0.7,  0.1,  0.0,  0.7]
+				}
+				LateNodeGlobalMatrix: {}
+				Light:
+				{
+					LightType:                  "Cone"
+					Radius:                     0.04
+					Luminance:                  [  1.6e7, 1.6e7, 1.6e7]
+				}
+				ModelDraw:
+				{
+					IsLight:                    true
+				}
+			}
+		}
+	}
 	map_fab: 
 	{
-		basedOn:									"map/Scene"
+		basedOn:								"map/Scene"
 		tweak: 
 		{
 			"_animations/Banner_Bones.001|Banner_BonesAction.001_Armature_0":
@@ -52,7 +77,7 @@ fabs:
 	}
 	snake_fab0:
 	{
-		basedOn:									"snake/Scene"
+		basedOn:								"snake/Scene"
 		tweak: 
 		{
 			"SnakeArmature":
@@ -84,7 +109,7 @@ fabs:
 	}
 	snake_fab1:
 	{
-		basedOn:									"snake/Scene"
+		basedOn:								"snake/Scene"
 		tweak: 
 		{
 			"SnakeArmature":
@@ -116,7 +141,7 @@ fabs:
 	}
 	snake_fab2:
 	{
-		basedOn:									"snake/Scene"
+		basedOn:								"snake/Scene"
 		tweak: 
 		{
 			"SnakeArmature":
@@ -148,7 +173,7 @@ fabs:
 	}
 	snake_player:
 	{
-		basedOn:									"snake/Scene"
+		basedOn:								"snake/Scene"
 		tweak: 
 		{
 			"SnakeArmature":
@@ -181,7 +206,7 @@ fabs:
 	}
 	apple_fab0:
 	{
-		basedOn:									"apple/Scene"
+		basedOn:								"apple/Scene"
 		tweak:
 		{
 			"RootNode (gltf orientation matrix)":
@@ -196,7 +221,7 @@ fabs:
 	}
 	apple_fab1:
 	{
-		basedOn:									"apple/Scene"
+		basedOn:								"apple/Scene"
 		tweak:
 		{
 			"RootNode (gltf orientation matrix)":
@@ -210,7 +235,7 @@ fabs:
 	}
 	apple_fab2:
 	{
-		basedOn:									"apple/Scene"
+		basedOn:								"apple/Scene"
 		tweak:
 		{
 			"RootNode (gltf orientation matrix)":
@@ -234,4 +259,5 @@ init:
     apple_0:				"apple_fab0"
     apple_1:				"apple_fab1"
     apple_2:				"apple_fab2"
+    sun_init:               "sun"
 }
