Avoid triangle self intersection

--- a/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
@@ -9,6 +9,31 @@ imports:
 
 fabs: 
 {
+	sun:
+	{
+		basedOn:                                "_empty"
+		tweak:
+		{
+			"":
+			{
+				NodeData:
+				{
+					LocalRotation:              [  -0.7,  0.4,  0.0,  0.7]
+				}
+				LateNodeGlobalMatrix: {}
+				Light:
+				{
+					LightType:                  "Cone"
+					Radius:                     0.04
+					Luminance:                  [  1.6e7, 1.6e7, 1.6e7]
+				}
+				ModelDraw:
+				{
+					IsLight:                    true
+				}
+			}
+		}
+	}
 	level: 
 	{
 		basedOn:			"map/Scene"
@@ -24,4 +49,5 @@ init:
 {
 	scene:					"level"
 	test:                   "env_test_fab"
+	sun_init:               "sun"
 }
