Allow sky customization

--- a/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
@@ -34,6 +34,21 @@ fabs:
 			}
 		}
 	}
+	sky:
+	{
+		basedOn:                                "_empty"
+		tweak:
+		{
+			"":
+			{
+				Light:
+				{
+					LightType:                  "Uniform"
+					Luminance:                  [  5.6e3, 6.4e3, 8.e3]
+				}
+			}
+		}
+	}
 	level: 
 	{
 		basedOn:			"map/Scene"
@@ -49,4 +64,5 @@ init:
 {
 	scene:					"level"
 	sun_init:               "sun"
+	sky_init:               "sky"
 }
