--- a/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
@@ -40,6 +40,21 @@ fabs:
 			}
 		}
 	}
+	sky:
+	{
+		basedOn:                                "_empty"
+		tweak:
+		{
+			"":
+			{
+				Light:
+				{
+					LightType:                  "Uniform"
+					Luminance:                  [  5.6e3, 6.4e3, 8.e3]
+				}
+			}
+		}
+	}
 	map_fab: 
 	{
 		basedOn:								"map/Scene"
@@ -254,10 +269,11 @@ init:
 	map_init:				"map_fab"
 	snake_0:				"snake_player"
 	snake_1:				"snake_fab0"
-    snake_2:				"snake_fab1"
-    snake_3:				"snake_fab2"
-    apple_0:				"apple_fab0"
-    apple_1:				"apple_fab1"
-    apple_2:				"apple_fab2"
-    sun_init:               "sun"
+	snake_2:				"snake_fab1"
+	snake_3:				"snake_fab2"
+	apple_0:				"apple_fab0"
+	apple_1:				"apple_fab1"
+	apple_2:				"apple_fab2"
+	sun_init:               "sun"
+	sky_init:               "sky"
 }
