RIS light selection

--- a/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
@@ -25,7 +25,32 @@ fabs:
 				{
 					LightType:                  "Cone"
 					Radius:                     0.04
-					Luminance:                  [  1.6e7, 1.4e7, 1.2e7]
+					Luminance:                  [ 1.5e7, 0.0, 0.0]
+				}
+				ModelDraw:
+				{
+					IsLight:                    true
+				}
+			}
+		}
+	}
+	sun_1:
+	{
+		basedOn:                                "_empty"
+		tweak:
+		{
+			"":
+			{
+				NodeData:
+				{
+					LocalRotation:              [  -0.9,  0.2,  0.0,  0.7]
+				}
+				LateNodeGlobalMatrix: {}
+				Light:
+				{
+					LightType:                  "Cone"
+					Radius:                     0.04
+					Luminance:                  [  0.0, 0.0, 1.5e7]
 				}
 				ModelDraw:
 				{
@@ -44,7 +69,7 @@ fabs:
 				Light:
 				{
 					LightType:                  "Uniform"
-					Luminance:                  [  5.6e3, 6.4e3, 8.e3]
+					Luminance:                  [  0.0, 6.0e3, 0.0]
 				}
 			}
 		}
@@ -64,5 +89,6 @@ init:
 {
 	scene:					"level"
 	sun_init:               "sun"
+	sun_1_init:             "sun_1"
 	sky_init:               "sky"
 }
