Resampling with MIS from NEE and Bounce ray

--- a/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
@@ -25,32 +25,7 @@ fabs:
 				{
 					LightType:                  "Cone"
 					Radius:                     0.04
-					Luminance:                  [ 1.5e7, 0.0, 0.0]
-				}
-				ModelDraw:
-				{
-					IsLight:                    true
-				}
-			}
-		}
-	}
-	sun_1:
-	{
-		basedOn:                                "_empty"
-		tweak:
-		{
-			"":
-			{
-				NodeData:
-				{
-					LocalRotation:              [  -0.9,  0.2,  0.0,  0.7]
-				}
-				LateNodeGlobalMatrix: {}
-				Light:
-				{
-					LightType:                  "Cone"
-					Radius:                     0.04
-					Luminance:                  [  0.0, 0.0, 1.5e7]
+					Luminance:                  [  1.6e7, 1.4e7, 1.2e7]
 				}
 				ModelDraw:
 				{
@@ -69,12 +44,12 @@ fabs:
 				Light:
 				{
 					LightType:                  "Uniform"
-					Luminance:                  [  0.0, 6.0e3, 0.0]
+					Luminance:                  [  5.6e3, 6.4e3, 8.e3]
 				}
 			}
 		}
 	}
-	level: 
+	level:
 	{
 		basedOn:			"map/Scene"
 	}
@@ -82,13 +57,13 @@ fabs:
 	{
 		basedOn:			"env_test/Scene"
 	}
-	
+
 }
 
-init: 
+init:
 {
 	scene:					"level"
 	sun_init:               "sun"
-	sun_1_init:             "sun_1"
 	sky_init:               "sky"
+	balls_init:             "env_test_fab"
 }
