Add experimental MSAA geometry antialias

--- a/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
@@ -9,6 +9,24 @@ imports:
 
 fabs: 
 {
+	_defaultCamera:
+	{
+		basedOn:                                "_empty"
+		tweak:
+		{
+			"":
+			{
+				Camera: {}
+				CameraDefaultInput:
+				{
+					GlobalDirection:            [-0.8, 0.2, 0.0]
+					GlobalPosition:             [0.0, -30.0, 4.0]
+					freezed:                    false
+				}
+			}
+
+		}
+	}
 	sun:
 	{
 		basedOn:                                "_empty"
@@ -57,7 +75,6 @@ fabs:
 	{
 		basedOn:			"env_test/Scene"
 	}
-
 }
 
 init:
