Add NRD initial commit

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "VulkanMemoryAllocator-Hpp"]
 	path = VulkanMemoryAllocator-Hpp
 	url = https://github.com/YaaZ/VulkanMemoryAllocator-Hpp.git
+[submodule "RayTracingDenoiser"]
+	path = RayTracingDenoiser
+	url = https://github.com/thesmallcreeper/RayTracingDenoiser.git
