--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -6,6 +6,7 @@ game: {
 
 graphicsSettings: {
 	gpuPreferred:		""
+	renderer:           "realtime"       // offline, realtime (default)
 	xRes:				1900
 	yRes:				1000
 	presentMode:		"FIFO"		    // Immediate, FIFO, FIFOrelaxed, Mailbox
