--- a/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
@@ -43,7 +43,7 @@ fabs:
 				{
 					LightType:                  "Cone"
 					Radius:                     0.04
-					Luminance:                  [  1.6e7, 1.4e7, 1.2e7]
+					Luminance:                  [  1.6e7, 1.5e7, 1.5e7]
 				}
 				ModelDraw:
 				{
@@ -62,7 +62,7 @@ fabs:
 				Light:
 				{
 					LightType:                  "Uniform"
-					Luminance:                  [  5.6e3, 6.4e3, 8.e3]
+					Luminance:                  [ 3.5e3, 4.2e3, 7.e3]
 				}
 			}
 		}
@@ -82,4 +82,5 @@ init:
 	scene:					"level"
 	sun_init:               "sun"
 	sky_init:               "sky"
+	balls:                  "env_test_fab"
 }
