--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -6,10 +6,10 @@ game: {
 
 graphicsSettings: {
 	gpuPreferred:		""
-	renderer:           "realtime"       // offline, realtime (default)
+	renderer:           "realtime-reLAX"        // offline, realtime-reBLUR, realtime-reLAX (default)
 	xRes:				1900
 	yRes:				1000
-	presentMode:		"FIFO"		    // Immediate, FIFO, FIFOrelaxed, Mailbox
+	presentMode:		"FIFO"		            // Immediate, FIFO, FIFOrelaxed, Mailbox
 	FOV:				94.0
 	nearPlaneDistance:	0.2
 	farPlaneDistance:	150.0
