--- a/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
@@ -82,5 +82,5 @@ init:
 	scene:					"level"
 	sun_init:               "sun"
 	sky_init:               "sky"
-	balls:                  "env_test_fab"
+	basss:                  "env_test_fab"
 }
