Add local light sources

--- a/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
@@ -52,6 +52,32 @@ fabs:
 			}
 		}
 	}
+	light_ball:
+	{
+		basedOn:                                "_empty"
+		tweak:
+		{
+			"":
+			{
+				NodeData:
+				{
+					GlobalTranslation:			[  20.0, -20.0, 0.0]
+				}
+				LateNodeGlobalMatrix: {}
+				Light:
+				{
+					LightType:                  "Sphere"
+					Radius:                     0.75
+					Range:                      60.0
+					Luminance:                  [  4.e5, 2.e5, 2.e5]
+				}
+				ModelDraw:
+				{
+					IsLight:                    true
+				}
+			}
+		}
+	}
 	sky:
 	{
 		basedOn:                                "_empty"
@@ -81,6 +107,7 @@ init:
 {
 	scene:					"level"
 	sun_init:               "sun"
+	light_ball_init:        "light_ball"
 	sky_init:               "sky"
-	basss:                  "env_test_fab"
+	env_balls:              "env_test_fab"
 }
