--- a/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
@@ -109,4 +109,5 @@ init:
 	sun_init:               "sun"
 	light_ball_init:        "light_ball"
 	sky_init:               "sky"
+	ballss:                 "env_test_fab"
 }
