--- a/inMyRoom_vulkan/CMakeLists.txt
+++ b/inMyRoom_vulkan/CMakeLists.txt
@@ -4,13 +4,9 @@ project(inMyRoom_vulkan)
 
 add_subdirectory(../glfw "${CMAKE_CURRENT_BINARY_DIR}/glfw")
 
-set(NRD_STATIC_LIBRARY ON)
-set(NRD_SHADER_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/shaders/NRD/binary")
-if (WIN32)
-    set(NRD_USE_OCT_NORMAL_ENCODING 1)
-else ()
-    set(NRD_USE_OCT_NORMAL_ENCODING "1")
-endif ()
+set(NRD_STATIC_LIBRARY ON CACHE BOOL {NRD_STATIC_LIBRARY})
+set(NRD_SHADER_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/shaders/NRD/binary" CACHE STRING {NRD_SHADER_OUTPUT_PATH})
+set(NRD_USE_OCT_NORMAL_ENCODING "1" CACHE STRING {NRD_USE_OCT_NORMAL_ENCODING})
 add_subdirectory(../RayTracingDenoiser "${CMAKE_CURRENT_BINARY_DIR}/RayTracingDenoiser")
 
 set(CMAKE_CXX_STANDARD 20)
