Add fullscreen option

--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -9,6 +9,7 @@ graphicsSettings: {
 	renderer:           "realtime-reLAX"        // offline, realtime-reBLUR, realtime-reLAX (default)
 	xRes:				1600
 	yRes:				900
+	fullscreen:			false
 	presentMode:		"FIFO"		            // Immediate, FIFO, FIFOrelaxed, Mailbox
 	FOV:				94.0
 	nearPlaneDistance:	0.2
