Add Vulkan debug info

--- a/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
@@ -19,8 +19,8 @@ fabs:
 				Camera: {}
 				CameraDefaultInput:
 				{
-					GlobalPosition:             [2.08429, -10.6606, -4.49594]
-					GlobalDirection:            [-0.96245, 0.01548, 0.271016]
+					GlobalPosition:             [26.0328, -25.1372, 5.99797]
+					GlobalDirection:            [-0.373537, -0.0370074, -0.926877]
 					freezed:                    false
 				}
 			}
