--- a/inMyRoom_vulkan/.gitignore
+++ b/inMyRoom_vulkan/.gitignore
@@ -148,6 +148,8 @@ _TeamCity*
 # Files created by CLion
 cmake-build-debug/
 cmake-build-release/
+cmake-build-debug-clang/
+cmake-build-release-clang/
 
 # CMake build folder
 build/
